--- a/index.html
+++ b/index.html
@@ -17,7 +17,27 @@
             </nav>
         </header>
         <main>
-            <p></p>
+            <p>
+				<div class="container">
+					<div style="text-align:center">
+					  <h2>Contact Me!</h2>
+					  <p>Swing by for a cup of coffee, or leave us a message:</p>
+					</div>
+					<div class="row">
+					  <div class="column">
+						<form action="/action_page.php">
+						  <label for="fname">Name</label>
+						  <input type="text" id="fname" name="firstname" placeholder="Your name..">
+						  <label for="lname">Email</label>
+						  <input type="text" id="email" name="email" placeholder="Email..">
+						  <label for="subject">Subject</label>
+						  <textarea id="subject" name="subject" placeholder="Write something.." style="height:80px"></textarea>
+						  <input type="submit" value="Submit">
+						</form>
+					  </div>
+					</div>
+				  </div>
+			</p>
         </main>
     </body>
 </html>
