--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					  <p>Swing by for a cup of coffee, or leave us a message:</p>
 					</div>
 					<div class="row">
-					  <div class="column">
+					  <div class="column" style="text-align:center">
 						<form action="/action_page.php">
 						  <label for="fname">Name</label>
 						  <input type="text" id="fname" name="firstname" placeholder="Your name..">
