--- a/index.html
+++ b/index.html
@@ -24,20 +24,17 @@
 					  <p>Swing by for a cup of coffee, or leave us a message:</p>
 					</div>
 					<div class="row">
-					  <div class="column" style="text-align:center">
-						<form action="/action_page.php">
-						  <label for="fname">Name</label>
-						  <input type="text" id="fname" name="firstname" placeholder="Your name..">
-						  <label for="lname">Email</label>
-						  <input type="text" id="email" name="email" placeholder="Email..">
-						  <label for="subject">Subject</label>
-						  <textarea id="subject" name="subject" placeholder="Write something.." style="height:80px"></textarea>
-						  <input type="submit" value="Submit">
-						</form>
-					  </div>
+						<form>      
+							<input name="name" type="text" class="feedback-input" placeholder="Name" />   
+							<input name="email" type="text" class="feedback-input" placeholder="Email" />
+							<textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+							<input type="submit" value="SUBMIT"/>
+						  </form>
 					</div>
 				  </div>
 			</p>
         </main>
     </body>
 </html>
+
+
