--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <main>
             <p>
               <top>
-                <img src="/images/coffee.jpg" alt="Avatar">
-              </top>
+                <IMG STYLE="position:absolute; TOP:35px; LEFT:170px; WIDTH:50px; HEIGHT:50px" SRC="/images/coffee.jpg">
+                </top>
               <hr>
 				<div class="container">
 					<div style="text-align:center">
