--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <p>
               <top>
-                <IMG STYLE="position:absolute; TOP:35px; LEFT:170px; WIDTH:50px; HEIGHT:50px" SRC="/images/coffee.jpg">
+                <IMG STYLE="TOP:35px; LEFT:170px; WIDTH:50px; HEIGHT:50px" SRC="/images/coffee.jpg">
                 </top>
               <hr>
 				<div class="container">
