--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <p>
               <top>
-                <IMG STYLE="TOP:170px; LEFT:700px; WIDTH:200px; HEIGHT:200px" SRC="/images/coffee.jpg">
+                <IMG STYLE=" WIDTH:200px; HEIGHT:200px" SRC="/images/coffee.jpg">
                 </top>
               <hr>
 				<div class="container">
