--- a/index.html
+++ b/index.html
@@ -19,7 +19,31 @@
         <main>
             <p>
               <top>
-                <IMG STYLE=" WIDTH:200px; HEIGHT:200px" SRC="/images/coffee.jpg">
+                <div class="container container-custom">
+                  <div class="row">
+                    <div class="col-lg-6 col-sm-12">
+                      <div id="about-me-image-container">
+                        <img id="about-me-image" src="/images/coffee.jpg" />
+                      </div>
+                    </div>
+                    <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
+                      <h5 id="about-me-heading">Hi, I'm Guillermo 👋</h5>
+                      <p id="about-me-parragraph">I'm currently studying computer science at the <span class="about-me-word">University of Virginia</span> and interested in developing my skills as a <span class="about-idme-word">full-stack software engineer</span>. I enjoy working with <span class="about-me-word">React, Node, Ruby on Rails, AWS, etc.</span></p>
+                      <div id="about-me-social-logos-container">
+                        <a href="https://twitter.com/guillermo_saave" target="_blank">
+                          <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
+                        </a>
+                        <a href="https://github.com/guillermocoding" target="_blank">
+                          <img class="about-me-social-logo" src="./assets/github-logo.png"/>
+                        </a>
+                        <a href="https://www.producthunt.com/@guillermo_saavedra" target="_blank">
+                          <img class="about-me-social-logo" src="./assets/product-hunt-logo.png"/>
+                        </a>
+                        <a href="https://www.linkedin.com/in/guillermosaavedradiaz/" target="_blank">
+                          <img class="about-me-social-logo" src="./assets/linkedin-logo.png"/>
+                        </a>
+                      </div>
+                    </div>
                 </top>
               <hr>
 				<div class="container">
@@ -44,5 +68,6 @@
 	  </footer>
 	  
 </html>
+
 
 
