--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "blog">
     <head>
         <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
