--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="background-color:aquamarine;">
+    <body style="background-color:rgb(29, 104, 104);">
         <header>
             <nav>
                 <ul>
