--- a/blog.html
+++ b/blog.html
@@ -22,13 +22,20 @@
                 </div>
             </section>
             <section id="embed">
-                <div id="retainable-rss-embed" data-rss="https://medium.com/feed/@thomlom" data-maxcols="3" data-layout="grid" data-poststyle="inline" data-readmore="Read the rest" data-buttonclass="btn btn-primary" data-offset="-100"></div>
+                <div id="retainable-rss-embed" 
+                data-rss="https://medium.com/feed/@hishamiqbal"
+                data-maxcols="3" 
+                data-layout="grid" 
+                data-poststyle="inline" 
+                data-readmore="Read the rest" 
+                data-buttonclass="btn btn-primary" 
+                data-offset="-100"></div>
             </section>
         </main>
         <hr>
         <footer>
             © Copyright Mohammad Hisham Iqbal, 2020
-            <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
         </footer>
+        <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
     </body>
 </html>
