--- a/blog.html
+++ b/blog.html
@@ -24,13 +24,14 @@
             </section>
             <section id="embed">
                 <div id="retainable-rss-embed" 
-                data-rss="https://medium.com/feed/@yashtekriwal"
-                data-maxcols="3" 
-                data-layout="slider" 
-                data-poststyle="inline" 
-                data-readmore="Read the rest" 
-                data-buttonclass="btn btn-primary" 
-                data-offset="-100"></div>
+    data-rss="https://medium.com/feed/retainable,
+     https://medium.com/feed/js-dojo, https://medium.com/feed/vue-mastery" 
+     data-maxcols="4" 
+     data-layout="slider" 
+     data-poststyle="modal" 
+     data-readmore="Read the rest" 
+     data-buttonclass="btn btn-primary" 
+     data-offset="-200">&#160;</div>
             </section>
         </main>
         <hr>
@@ -38,5 +39,5 @@
             © Copyright Mohammad Hisham Iqbal, 2020
         </footer>
         <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
-    </body>
+        </body>
 </html>
