--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
 				  </div>
 			</p>
         </main>
+        <hr>
+	<div id="footer-container">
+    <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
+  </div>
   </body>
-  <hr>
-	<footer id = "footer">
-		<p>Copyright 2020 Mohammad Hisham Iqbal</p>
-	  </footer>
-	  
 </html>
 
 
