--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <p>
               <top>
                 <div class="row">
-                  <div class="column">
-                    <h2><img src="/images/coffee.jpg" alt="Avatar" width="128" height="128"></h2>
+                  <div class="column" id = "image">
+                    <h2><img src="images/coffee.jpg" alt="Avatar"></h2>
                   </div>
                   <div class="column">
                     <h2><font color="purple"> Hello, I'm Hisham! </font></h2>
