--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <top>
                 <div class="row">
                   <div class="column" id = "image">
-                    <h2><img src="images/coffee.jpg" alt="Avatar"></h2>
+                    <h2><img src="images/coffee.jpg" alt="Avatar" width = 100px height = 100px></h2>
                   </div>
                   <div class="column">
                     <h2><font color="purple"> Hello, I'm Hisham! </font></h2>
