--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <title>Hisham Iqbal</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="background-color:rgb(146, 185, 180);">
+    <body style="background-color:rgba(146, 163, 161, 0.836);">
         <header>
             <nav>
                 <ul>
