--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            background-color: red;
+            height: 20;
+            background-color: grey;
             color: white;
             text-align: center;
           }
