--- a/experience.html
+++ b/experience.html
@@ -1,18 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hisham Iqbal</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body style="background-color:rgba(146, 163, 161, 0.836);">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-	        		<li><a href="/experience">Experience</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                </ul>
-            </nav>
-        </header>
-        </body>
-        </html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<title>New Document</title>
+	<style type="text/css">
+		html {height: 100%;}
+		body {margin: 0; height: 100%;}
+		#wrap {position: relative; width: 500px; min-height: 100%; background: #eee;}
+		#footer {
+			position: absolute;
+			bottom: 0px;
+			height: 25px;
+			background: #333;
+			width: 100%;
+		}
+
+	</style>
+</head>
+
+<body>
+	<div id="wrap">
+		<div id="content"> </div>
+		<div id="footer"> </div>
+	</div>
+</body>
+</html>
