--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="row">
       <ul class = "main-nav">
-        <li><a href=""> HOME </a></li>
+        <li class="active"><a href=""> HOME </a></li>
         <li><a href=""> INFO </a></li>
         <li><a href=""> BLOG </a></li>
         <li><a href=""> CONTACT </a></li>
