--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
   <header>
     <div class="row">
+      <div class ="logo">
+        <img src = "images/icon.png">
+      </div>
       <ul class = "main-nav">
         <li class="active"><a href=""> HOME </a></li>
         <li><a href=""> INFO </a></li>
