--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 
       </ul>
     </div>
+
+
+    <div class = "hero">
+      <h1>Welcome to Hisham Iqbal!</h1>
+
+      <div class="button">
+        <a href=""class="btn btn-one"> Watch Video</a>
+        <a href=""class="btn btn-two"> Calendly</a>
+      </div>
+    </div>
   </header>
 </body>
 </html>
