--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <div class="navbar-header">
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
+
+        <ul class="nav navbar-nav">
+          <li><a href="">Home</a></li>
+          <li><a href="">Experiences</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+
+        </ul>
+
       </div>
     </nav>
   </header>
