--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <nav class ="navbar navbar-style">
       <div class ="containter">
         <div class="navbar-header">
+          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+          </button>
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
 
@@ -35,6 +40,25 @@
 
       </div>
     </nav>
+
+
+
+      <div class="container">
+        <div class ="row">
+          <div class="col-sm-6">
+            <h1>Welcome To</h1>
+            <p>Hisham Iqbal's</p>
+            <p>Personal Website</p>
+          </div>
+          
+          <div class="col-sm-6">
+
+          </div>
+
+        </div>
+      </div>
+
+
   </header>
 </body>
 </html>
