--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           
           <div class="col-sm-6">
-            <img src="/images/coffee.jpg" class"img-responsive">
+            <img src="/images/coffee.jpg" class="img-responsive">
           </div>
 
         </div>
