--- a/blog.html
+++ b/blog.html
@@ -39,3 +39,13 @@
             © Copyright Mohammad Hisham Iqbal, 2020
         </footer>
 </html>
+
+
+
+header
+{
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
