--- a/experience.html
+++ b/experience.html
@@ -1,26 +1,69 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-	<title>New Document</title>
-	<style type="text/css">
-		html {height: 100%;}
-		body {margin: 0; height: 100%;}
-		#wrap {position: relative; width: 500px; min-height: 100%; background: #eee;}
-		#footer {
-			position: absolute;
-			bottom: 0px;
-			height: 25px;
-			background: #333;
-			width: 100%;
-		}
+  <title>
+    Hisham Iqbal
+  </title>
+  <link href="style.css" rel= "stylesheet" type="text/css">
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-	</style>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
+
+
 <body>
-	<div id="wrap">
-		<div id="content"> </div>
-		<div id="footer"> </div>
-	</div>
+  <header class ="header">
+    <nav class ="navbar navbar-style">
+      <div class ="containter">
+        <div class="navbar-header">
+          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+          </button>
+          <a href =""><img class="logo" src = "images/icon.png"></a>
+        </div>
+
+        <ul class="nav navbar-nav navbar-center">
+			<li><a href="/">Home</a></li>
+			<li><a href="/experience">Experiences</a></li>
+			<li><a href="/projects">Projects</a></li>
+			<li><a href="/blog">Blog</a></li>
+			<li><a href="/contact">Contact</a></li>
+  
+        </ul>
+
+      </div>
+    </nav>
+
+
+
+      <div class="container">
+        <div class ="row">
+          <div class="col-sm-6 banner-info">
+            <h1>Welcome To</h1>
+            <p class="big-text">Hisham Iqbal's</p>
+            <p>Personal Website</p>
+            <a class="btn btn-first" href="#">About Me</a>
+            <a class="btn btn-second" href="#">Schedule Me</a>
+          </div>
+          
+          <div class="col-sm-6 banner-image">
+            <img src="/images/coffee.jpg" class="img-responsive">
+          </div>
+
+        </div>
+      </div>
+
+
+  </header>
 </body>
 </html>
+
+
+
