--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>
-    Business Website
+    Hisham Iqbal
   </title>
   <link href="style.css" rel= "stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
@@ -29,12 +29,12 @@
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="">Home</a></li>
-          <li><a href="">Experiences</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact</a></li>
+        <ul class="nav navbar-nav navbar-center">
+          <li><a href="/">Home</a></li>
+          <li><a href="/experience">Experiences</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contact">Contact</a></li>
 
         </ul>
 
