--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <title>
     Hisham Iqbal
   </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel= "stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -41,7 +43,13 @@
       </div>
     </nav>
 
-
+    <img src="/image/background.jpg" alt="mmtuts banner">
+    <div class="wrapper">
+      <article class="img-info">
+        <h2>Yay!</h2>
+        <p>Hello!!asdlhjlhajlksdfhlka haljsdfhlaksjdfhlakjsdfhjlkahsdfklhjasdf ljhadflkjahsdklfhjaklsdfhalkjsf alfdhakljsdfhalkjhfdalkj afdlkjhajhsdf</p>
+      </article>
+    </div>
 
       <div class="container">
         <div class ="row">
