--- a/experience.html
+++ b/experience.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <title>
     Hisham Iqbal
   </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel= "stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -29,19 +31,20 @@
           <a href =""><img class="logo" src = "images/icon.png"></a>
         </div>
 
-        <ul class="nav navbar-nav navbar-center">
-			<li><a href="/">Home</a></li>
-			<li><a href="/experience">Experiences</a></li>
-			<li><a href="/projects">Projects</a></li>
-			<li><a href="/blog">Blog</a></li>
-			<li><a href="/contact">Contact</a></li>
-  
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/experience">Experiences</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contact">Contact</a></li>
+
         </ul>
 
       </div>
     </nav>
 
-
+    <img class="img-banner" src="/images/experiences.png" alt="mmtuts banner" class="img-responsive">
+    
 
       <div class="container">
         <div class ="row">
