--- a/blog.html
+++ b/blog.html
@@ -2,142 +2,143 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 <style>
-* {
-  box-sizing: border-box;
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Add a gray background color with some padding */
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-/* Header/Blog Title */
-.header {
-  padding: 30px;
-  font-size: 40px;
+.hero-text {
   text-align: center;
-  background: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
 }
 
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
 }
 
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
+
+/*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
+
+.topnav {
+  overflow: hidden;
 }
 
-/* Add a card effect for articles */
-.card {
-   background-color: white;
-   padding: 20px;
-   margin-top: 20px;
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-/* Footer */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/*----------------------------------------------------------------- footer css---------------------------------------------------------------*/
+
+
 .footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
+   position: fixed, absolute;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
-}
 </style>
 </head>
 <body>
 
-<div class="header">
-  <h2>Hisham</h2>
+<!----------------------------------------------------------------- top menu html---------------------------------------------------------->
+
+<div class="topnav">
+  <a class="active" href="/home">Home</a>
+  <a href="/blog">Blog</a>
+  <a href="#contact">Professional</a>
+  <a href="#about">About</a>
 </div>
 
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-    <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-  </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
-    </div>
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">Blog</h1>
+    <p>Musings from my mind</p>
   </div>
 </div>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+
 
 <div class="footer">
-  <h2>
-    <form action="action_page.php">
-      <div class="container">
-        <h2>Subscribe to our Newsletter</h2>
-        <p>Lorem ipsum..</p>
-      </div>
-    
-      <div class="container" style="background-color:white">
-        <input type="text" placeholder="Name" name="name" required>
-        <input type="text" placeholder="Email address" name="mail" required>
-        <label>
-          <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
-        </label>
-      </div>
-    
-      <div class="container">
-        <input type="submit" value="Subscribe">
-      </div>
-    </form>
-
-  </h2>
+  <p>Footer</p>
 </div>
 
 </body>
