--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,19 @@
   box-sizing: border-box;
 }
 
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 40%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 60%;
+}
+
 /* Fake image */
 .fakeimg {
   background-color: #aaa;
@@ -31,6 +44,14 @@
   content: "";
   display: table;
   clear: both;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
 }
 
 /*----------------------------------------------------------------- header css---------------------------------------------------------------*/
@@ -138,23 +159,21 @@ body, html {
 </div>
 
 <!----------------------------------------------------------------- content html---------------------------------------------------------->
-
-
+<div class="row">
 <div class="leftcolumn">
   <div class="card">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
+</div>
+<div class="rightcolumn">
   <div class="card">
     <h2>TITLE HEADING</h2>
     <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
+</div>
+
 </div>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
