--- a/blog.html
+++ b/blog.html
@@ -178,7 +178,9 @@ body, html {
       <h5>Title description, Sep 2, 2017</h5>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <button>Read more</button>
+      <button onclick="window.location.href='/blog/uvaquarantine';">
+        Click Here
+      </button>
     </div>
 
     <div class="card">
