--- a/blog.html
+++ b/blog.html
@@ -174,7 +174,7 @@ body, html {
 
   <div class="rightcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
+      <h2>UVA Quarantine</h2>
       <h5>Title description, Sep 2, 2017</h5>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
