--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -11,39 +11,6 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
-
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
-}
 
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
@@ -69,6 +36,17 @@ body, html {
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
+}
+
+/*----------------------------------------------------------------- content css---------------------------------------------------------------*/
+
+.bodyheader a {
+    font-size: large;
+    word-wrap: break-word;
+  }
+.bodyheader b{
+    font-size: medium;
+    word-wrap: break-word;
 }
 
 /*----------------------------------------------------------------- footer css---------------------------------------------------------------*/
@@ -97,42 +75,21 @@ body, html {
   <a href="/about">About</a>
 </div>
 
-<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+<!----------------------------------------------------------------- content html---------------------------------------------------------->
 
-<div class="hero-image">
-  <div class="hero-text">
-    <h1 style="font-size:50px">Hisham Iqbal</h1>
-    <p>Welcome to my story</p>
-  </div>
+<div class="bodyheader">
+   <a class="a">A story ended early</a>
+    <b class="b">It’s weird. The moment I received the email, I was across the 
+        border as a tourist in our Northern neighbor. I was supposed to be 
+        across the waters as a tourist in our Western neighbors. My friend and I had to 
+        cancel our Senior year Spring Break trip to Europe last minute due to Coronavirus. Amidst all the chaos 
+        going on in Europe, we did not have any inclination that America would be the next victim. That’s why driving 
+        by the Niagara Falls and recieving the email by Jim Ryan, University of Virginia President, that school would 
+        be cancelled was exhilirating. That was my initial emotion. I felt released from school, released from the 
+        responsibility that came with it.</b> 
 </div>
 
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
+  
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
